# ShapeLab

./: AGENTS.md  Cargo.toml  README.md
crates/orchard-app/: Cargo.toml  check_make_canvas_screenshots.ps1
crates/orchard-app/src/: main.rs  product_gate.rs
crates/orchard-app/tests/: check_make_canvas_screenshots.sh  foundry_contracts.rs  foundry_customize.rs  foundry_direction_board.rs  foundry_history.rs  foundry_pack_ui.rs  foundry_state.rs  rename_contracts.rs
crates/orchard-cli/: Cargo.toml
crates/orchard-cli/src/: direct_kit_cli.rs  foundry_cli.rs  foundry_foundation_cli.rs  foundry_kit_cli.rs  godot_proof_cli.rs  main.rs  object_plan_cli.rs  personal_kit_cli.rs  prototype_pack_cli.rs
crates/orchard-cli/tests/: direct_kit.rs  foundry_foundation.rs  godot.rs  object_plan.rs  personal_kit.rs  prototype_pack.rs
crates/orchard-compile/: Cargo.toml
crates/orchard-compile/src/: lib.rs
crates/orchard-compile/tests/: export_realization.rs  model_export.rs  model_validation.rs  pattern.rs
crates/orchard-family-compile/: Cargo.toml
crates/orchard-family-compile/src/: identity.rs  lib.rs
crates/orchard-family-compile/tests/: conformance_contracts.rs  conformance_geometry.rs  conformance_structure.rs  remap_assembly.rs  remap_operations.rs  remap_ports.rs  remap_relationships.rs  remap_variation.rs
crates/orchard-field/: Cargo.toml
crates/orchard-field/benches/: field_sampling.rs
crates/orchard-field/src/: lib.rs
crates/orchard-field/tests/: randomized_sampling.rs
crates/orchard-foundry/: Cargo.toml
crates/orchard-foundry-catalog/: Cargo.toml
crates/orchard-foundry-catalog/src/: authoring.rs  box_primitive.rs  flat_panel.rs  kits.rs  lib.rs  panel_knob.rs  primitive_preset.rs  sphere_primitive.rs
crates/orchard-foundry-catalog/tests/: archetype.rs  authoring.rs  box_primitive.rs  curation.rs  flat_panel.rs  primitive_preset.rs  sphere_primitive.rs
crates/orchard-foundry/src/: archetype.rs  author_studio.rs  candidate.rs  catalog.rs  command.rs  compile.rs  control.rs  direct_kit.rs  document.rs  edit.rs  foundation.rs  geometry_export.rs  kit.rs  lib.rs  object_intent.rs  object_plan.rs  pack.rs  preference.rs  preview_display.rs  primitive_composition.rs  primitive_property.rs  primitive_surface.rs  project.rs  prototype_pack.rs  validation.rs  variation.rs
crates/orchard-foundry/tests/: archetype.rs  contracts.rs  control_runtime.rs  direct_kit.rs  document_runtime.rs  geometry_export.rs  llm_adapter.rs  object_plan.rs  personal_kit.rs  primitive_composition.rs  primitive_preset.rs  primitive_property.rs  prototype_pack.rs  session_metrics.rs  surface.rs
crates/orchard-mesh/: Cargo.toml
crates/orchard-mesh/benches/: mesh_generation.rs
crates/orchard-mesh/src/: lib.rs
crates/orchard-mesh/tests/: randomized_mesh_quality.rs
crates/orchard-modeling/: Cargo.toml
crates/orchard-modeling/src/: assembly.rs  bevel.rs  kernel_registry.rs  lib.rs
crates/orchard-modeling/tests/: assembly.rs  basic_generators.rs  bevel_quality.rs  modeling_features.rs  profile_generators.rs
crates/orchard-render/: Cargo.toml
crates/orchard-render/src/: lib.rs  surface_preview.rs
crates/orchard-render/tests/: foundry_preview.rs
crates/orchard-search-internal/: Cargo.toml
crates/orchard-search-internal/benches/: search_quality.rs
crates/orchard-search-internal/src/: lib.rs
crates/orchard-search-internal/tests/: asset_candidates.rs  asset_scoring.rs
crates/shape-app/: Cargo.toml  check_make_canvas_screenshots.ps1
crates/shape-app/src/: app.rs  commands.rs  desktop.rs  jobs.rs  lib.rs  main.rs  product_gate.rs  state.rs  viewport.rs
crates/shape-app/tests/: asset_state.rs  asset_ui.rs  check_make_canvas_screenshots.sh  foundry_contracts.rs  foundry_customize.rs  foundry_direction_board.rs  foundry_history.rs  foundry_pack_ui.rs  foundry_state.rs  inspector_tests.rs  job_tests.rs  panel_tests.rs  state_tests.rs  viewport_tests.rs
crates/shape-cli/: Cargo.toml
crates/shape-cli/src/: direct_kit_cli.rs  foundry_cli.rs  foundry_foundation_cli.rs  foundry_kit_cli.rs  foundry_visual_benchmark.rs  game_ready_static.rs  godot_proof_cli.rs  hq_quality.rs  main.rs  object_plan_cli.rs  personal_kit_cli.rs  prototype_pack_cli.rs  starter_template_quality.rs
crates/shape-cli/tests/: cli_demo.rs  direct_kit.rs  foundry_foundation.rs  godot.rs  object_plan.rs  personal_kit.rs  prototype_pack.rs
crates/shape-compile/: Cargo.toml
crates/shape-compile/src/: lib.rs
crates/shape-compile/tests/: export_realization.rs  model_export.rs  model_validation.rs  pattern.rs
crates/shape-family-compile/: Cargo.toml
crates/shape-family-compile/src/: identity.rs  lib.rs
crates/shape-family-compile/tests/: conformance_contracts.rs  conformance_geometry.rs  conformance_structure.rs  cross_domain.rs  remap_assembly.rs  remap_operations.rs  remap_ports.rs  remap_relationships.rs  remap_variation.rs
crates/shape-field/: Cargo.toml
crates/shape-field/benches/: field_sampling.rs
crates/shape-field/src/: lib.rs
crates/shape-field/tests/: randomized_sampling.rs
crates/shape-foundry-catalog/: Cargo.toml
crates/shape-foundry-catalog/src/: authoring.rs  box_primitive.rs  cargo_case.rs  expanded_profiles.rs  flat_panel.rs  kits.rs  lib.rs  moba_hero.rs  panel_knob.rs  primitive_preset.rs  roman_bridge.rs  scifi_crate.rs  showcase_gear.rs  simple_crate.rs  sphere_primitive.rs  stylized_lamp.rs  utility_crate.rs
crates/shape-foundry-catalog/tests/: archetype.rs  authoring.rs  box_primitive.rs  cargo_case.rs  content_expansion.rs  curation.rs  flat_panel.rs  moba_hero.rs  primitive_preset.rs  roman_bridge.rs  scifi_crate.rs  showcase_gear.rs  simple_crate.rs  sphere_primitive.rs  stylized_lamp.rs  utility_crate.rs
crates/shape-gamekit/: Cargo.toml
crates/shape-gamekit/src/: export.rs  gltf.rs  lib.rs  lineage.rs  motion.rs  readability.rs  rig.rs  surface.rs  validation.rs
crates/shape-gamekit/tests/: contracts.rs
crates/shape-project/: Cargo.toml
crates/shape-project/src/: asset.rs  (+2 more)
crates/shape-render/: Cargo.toml
crates/shape-search/: Cargo.toml
(+832 files in other folders)
