[workspace]
members = [
    "crates/shape-app",
    "crates/shape-cli",
    "crates/shape-core",
    "crates/shape-field",
    "crates/shape-mesh",
    "crates/shape-presets",
    "crates/shape-project",
    "crates/shape-render",
    "crates/shape-search",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/shape-lab"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
crossbeam-channel = "0.5.15"
eframe = "0.34.3"
egui = "0.34.3"
env_logger = "0.11.10"
glam = { version = "0.33.1", features = ["serde"] }
image = "0.25.10"
log = "0.4.32"
proptest = "1.11.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.12.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"

shape-core = { path = "crates/shape-core" }
shape-field = { path = "crates/shape-field" }
shape-mesh = { path = "crates/shape-mesh" }
shape-presets = { path = "crates/shape-presets" }
shape-project = { path = "crates/shape-project" }
shape-render = { path = "crates/shape-render" }
shape-search = { path = "crates/shape-search" }
