[workspace]
members = [
    "crates/shape-asset",
    "crates/shape-authoring",
    "crates/shape-app",
    "crates/shape-cli",
    "crates/shape-compile",
    "crates/shape-core",
    "crates/shape-decompiler",
    "crates/shape-field",
    "crates/shape-family",
    "crates/shape-family-compile",
    "crates/shape-foundry",
    "crates/shape-foundry-catalog",
    "crates/shape-mesh",
    "crates/shape-modeling",
    "crates/shape-modeling-assets",
    "crates/shape-poly",
    "crates/shape-program",
    "crates/shape-program-verify",
    "crates/shape-presets",
    "crates/shape-project",
    "crates/shape-render",
    "crates/shape-search",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/shape-lab"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0.102"
blake3 = "1.8.2"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
crossbeam-channel = "0.5.15"
eframe = "0.34.3"
egui = "0.34.3"
earcutr = "0.5.0"
env_logger = "0.11.10"
glam = { version = "0.33.1", features = ["serde"] }
image = "0.25.10"
log = "0.4.32"
proptest = "1.11.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.12.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"

shape-asset = { path = "crates/shape-asset" }
shape-authoring = { path = "crates/shape-authoring" }
shape-compile = { path = "crates/shape-compile" }
shape-core = { path = "crates/shape-core" }
shape-decompiler = { path = "crates/shape-decompiler" }
shape-family = { path = "crates/shape-family" }
shape-family-compile = { path = "crates/shape-family-compile" }
shape-field = { path = "crates/shape-field" }
shape-foundry = { path = "crates/shape-foundry" }
shape-foundry-catalog = { path = "crates/shape-foundry-catalog" }
shape-mesh = { path = "crates/shape-mesh" }
shape-modeling = { path = "crates/shape-modeling" }
shape-modeling-assets = { path = "crates/shape-modeling-assets" }
shape-poly = { path = "crates/shape-poly" }
shape-program = { path = "crates/shape-program" }
shape-program-verify = { path = "crates/shape-program-verify" }
shape-presets = { path = "crates/shape-presets" }
shape-project = { path = "crates/shape-project" }
shape-render = { path = "crates/shape-render" }
shape-search = { path = "crates/shape-search" }

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
