[workspace]
members = [
    "crates/orchard-asset",
    "crates/orchard-authoring",
    "crates/orchard-app",
    "crates/orchard-cli",
    "crates/orchard-compile",
    "crates/orchard-core-legacy",
    "crates/orchard-field",
    "crates/orchard-family",
    "crates/orchard-family-compile",
    "crates/orchard-foundry",
    "crates/orchard-foundry-catalog",
    "crates/orchard-mesh",
    "crates/orchard-modeling",
    "crates/orchard-modeling-assets",
    "crates/orchard-poly",
    "crates/orchard-presets",
    "crates/orchard-project",
    "crates/orchard-render",
    "crates/orchard-search-internal",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/armanewy/object-orchard"
rust-version = "1.92"

[workspace.dependencies]
anyhow = "1.0.102"
blake3 = "1.8.2"
clap = { version = "4.6.1", features = ["derive"] }
criterion = "0.8.2"
crossbeam-channel = "0.5.15"
eframe = "0.34.3"
egui = "0.34.3"
earcutr = "0.5.0"
env_logger = "0.11.10"
glam = { version = "0.33.1", features = ["serde"] }
image = "0.25.10"
log = "0.4.32"
proptest = "1.11.0"
rand = "0.10.1"
rand_chacha = "0.10.0"
rand_distr = "0.6.0"
rayon = "1.12.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"

orchard-asset = { path = "crates/orchard-asset" }
orchard-authoring = { path = "crates/orchard-authoring" }
orchard-compile = { path = "crates/orchard-compile" }
orchard-core-legacy = { path = "crates/orchard-core-legacy" }
orchard-family = { path = "crates/orchard-family" }
orchard-family-compile = { path = "crates/orchard-family-compile" }
orchard-field = { path = "crates/orchard-field" }
orchard-foundry = { path = "crates/orchard-foundry" }
orchard-foundry-catalog = { path = "crates/orchard-foundry-catalog" }
orchard-mesh = { path = "crates/orchard-mesh" }
orchard-modeling = { path = "crates/orchard-modeling" }
orchard-modeling-assets = { path = "crates/orchard-modeling-assets" }
orchard-poly = { path = "crates/orchard-poly" }
orchard-presets = { path = "crates/orchard-presets" }
orchard-project = { path = "crates/orchard-project" }
orchard-render = { path = "crates/orchard-render" }
orchard-search-internal = { path = "crates/orchard-search-internal" }

[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
