[package]
name = "orchard-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
glam.workspace = true
image.workspace = true
log.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
orchard-app = { path = "../orchard-app" }
orchard-asset.workspace = true
orchard-core-legacy.workspace = true
orchard-compile.workspace = true
orchard-field.workspace = true
orchard-foundry.workspace = true
orchard-foundry-catalog.workspace = true
orchard-mesh.workspace = true
orchard-modeling-assets.workspace = true
orchard-poly.workspace = true
orchard-presets.workspace = true
orchard-project.workspace = true
orchard-render.workspace = true
orchard-search-internal.workspace = true

[dev-dependencies]
tempfile.workspace = true
