[package]
name = "orchard-compile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
orchard-asset.workspace = true
orchard-modeling.workspace = true
orchard-poly.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
