[package]
name = "orchard-family-compile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
orchard-asset.workspace = true
orchard-compile.workspace = true
orchard-family.workspace = true
orchard-modeling.workspace = true
orchard-poly.workspace = true
thiserror.workspace = true
