[package]
name = "orchard-foundry-catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
orchard-asset.workspace = true
orchard-compile.workspace = true
orchard-family.workspace = true
orchard-family-compile.workspace = true
orchard-foundry.workspace = true

[dev-dependencies]
orchard-search-internal.workspace = true
tempfile.workspace = true
