[package]
name = "orchard-mesh"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
glam.workspace = true
orchard-core-legacy.workspace = true
orchard-field.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "mesh_generation"
harness = false
