[package]
name = "orchard-modeling"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
earcutr.workspace = true
serde.workspace = true
orchard-asset.workspace = true
orchard-poly.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
