[package]
name = "orchard-search-internal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true
orchard-asset.workspace = true
orchard-compile.workspace = true
orchard-core-legacy.workspace = true
orchard-foundry.workspace = true
thiserror.workspace = true

[dev-dependencies]
orchard-foundry-catalog.workspace = true

[[bench]]
name = "search_quality"
harness = false
