[package]
name = "shape-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel.workspace = true
eframe.workspace = true
egui.workspace = true
env_logger.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
shape-asset.workspace = true
shape-compile.workspace = true
shape-core.workspace = true
shape-foundry.workspace = true
shape-foundry-catalog.workspace = true
shape-mesh.workspace = true
shape-project.workspace = true
shape-render.workspace = true
shape-search.workspace = true

[dev-dependencies]
shape-family.workspace = true
shape-family-compile.workspace = true
