[package]
name = "shape-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
image.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
shape-core.workspace = true
shape-decompiler.workspace = true
shape-field.workspace = true
shape-mesh.workspace = true
shape-presets.workspace = true
shape-project.workspace = true
shape-render.workspace = true
shape-search.workspace = true

[dev-dependencies]
tempfile.workspace = true
