[package]
name = "shape-compile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shape-asset.workspace = true
shape-modeling.workspace = true
shape-poly.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
