[package]
name = "shape-family-compile"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shape-asset.workspace = true
shape-compile.workspace = true
shape-family.workspace = true
thiserror.workspace = true

[dev-dependencies]
shape-caesar-assets.workspace = true
