[package]
name = "shape-foundry-catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shape-asset.workspace = true
shape-caesar-assets.workspace = true
shape-character.workspace = true
shape-compile.workspace = true
shape-family.workspace = true
shape-family-compile.workspace = true
shape-foundry.workspace = true

[dev-dependencies]
shape-search.workspace = true
tempfile.workspace = true
