[package]
name = "shape-gamekit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shape-asset.workspace = true
shape-mesh.workspace = true

[dev-dependencies]
glam.workspace = true
shape-core.workspace = true
tempfile.workspace = true
