[package]
name = "shape-project"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
shape-asset.workspace = true
shape-compile.workspace = true
shape-core.workspace = true
shape-foundry.workspace = true
shape-search.workspace = true
thiserror.workspace = true
