[package]
name = "shape-render"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
glam.workspace = true
serde.workspace = true
shape-core.workspace = true
shape-foundry.workspace = true
shape-mesh.workspace = true
thiserror.workspace = true
