[package]
name = "shape-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true
shape-core.workspace = true
thiserror.workspace = true

[[bench]]
name = "search_quality"
harness = false
