[package]
name = "shape-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
rand_distr.workspace = true
rayon.workspace = true
serde.workspace = true
shape-asset.workspace = true
shape-compile.workspace = true
shape-core.workspace = true
shape-foundry.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
shape-family.workspace = true
shape-family-compile.workspace = true
shape-foundry-catalog.workspace = true

[[bench]]
name = "search_quality"
harness = false
